--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-image: url('c1027ad7-f2a4-45fa-98e4-7f9fd8ea4aa1'); /* Caminho da imagem (na mesma pasta) */
+    background-image: url('c1027ad7-f2a4-45fa-98e4-7f9fd8ea4aa1.png'); /* Caminho da imagem com o nome correto */
     background-size: cover; /* A imagem vai cobrir toda a área da tela */
     background-position: center center; /* A imagem será centralizada */
     background-attachment: fixed; /* A imagem ficará fixa ao rolar a página */
